--- a/backend/api/composer.json
+++ b/backend/api/composer.json
@@ -6,7 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.2",
-        "laravel/lumen-framework": "^6.0"
+        "dingo/api": "^2.4",
+        "dusterio/lumen-passport": "^0.2.15",
+        "laravel/lumen-framework": "^6.0",
+        "liyu/dingo-serializer-switch": "^0.3.1",
+        "spatie/laravel-cors": "^1.6",
+        "spatie/laravel-permission": "^3.2",
+        "vinkla/hashids": "^7.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
